# mdcode

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  REVIEW.md  coverage_baseline.toml  coverage_improvement_plan.md  readme.md  tarpaulin-report.json
.github/: pull_request_template.md
scripts/: coverage_gate.py  open_coverage_html.sh
src/: detect_full.rs  lib.rs  main.rs
tests/: add_files_dry_run.rs  add_files_real.rs  add_remote.rs  checkout_tree.rs  cli_dispatch.rs  cli_more_diff_and_sync.rs  cli_tag_exists_error.rs  cli_tag_push_fail.rs  cli_tag_via_execute.rs  commit_by_index_in_bounds.rs  commit_by_index_oob.rs  create_gitignore_dry_run.rs  create_gitignore_real.rs  detect.rs  detect_all.rs  detect_more_exts.rs  detect_special_names.rs  detect_unknown.rs  diff_invalid_L_index.rs  diff_mixed_invalid_second.rs  diff_more_invalid.rs  diff_more_parse_errors.rs  diff_two_index_invalid_second_more.rs  diff_two_index_launch.rs  dirty_content_and_missing.rs  dirty_eol.rs  dirty_index_new.rs  dirty_no_commits.rs  dirty_rename.rs  dirty_unstaged_rename.rs  fetch_git_log_failure.rs  fetch_lists.rs  fetch_multi_more.rs  fs_utils.rs  gh_api_offline.rs  gh_cli_path_none.rs  gh_cli_path_ok.rs  gh_cli_visibility_arms.rs  gh_create_cli_success.rs  gh_create_internal_flag.rs  (+50 more)
tmp-smoke/: hello.rs
wrk_docs/: 2025.10.30 - CR - Coverage Improvement Plan.md  2025.10.30 - CR - Coverage Plan to 98%.md  2025.10.30 - CR - Coverage Review.md  2025.10.30 - Design Review - Refactor to Library and Test Reorg for 98% Coverage.md  2025.10.30 - Refactor to Library and Test Reorg for 98% Coverage.md  2025.10.31 - CI Coverage Gate.md  2025.10.31 - CR - Coverage Baseline Update.md  2025.10.31 - CR - Coverage Final Report — Achieved ≥98%.md  2025.10.31 - CR - Coverage Review and Plan.md  (+13 more)
(+8 files in other folders)
