[package]
name = "mdcode"
version = "1.5.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.16"
chrono = "0.4"
walkdir = "2.3"
env_logger = "0.10"
log = "0.4"
octocrab = "0.12"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.5"
