[package]
name = "mdcode"
version = "2.0.2"
edition = "2021"

[features]
offline_gh = []

[dependencies]
clap = { version = "4", features = ["derive"] }
# Build without libgit2 HTTPS/SSH to avoid OpenSSL
git2 = { version = "0.16", default-features = false }
chrono = "0.4"
walkdir = "2.3"
ignore = "0.4"
env_logger = "0.10"
log = "0.4"
# Use rustls to avoid system OpenSSL dependency
octocrab = { version = "0.12", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
semver = "1.0"
toml = "0.8"
shlex = "1.3"

[dev-dependencies]
tempfile = "3.5"
serial_test = "2"
which = "4"

[lints.rust]
# Recognize cfg(tarpaulin) used in this repo to avoid unexpected_cfg warnings.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)", "cfg(coverage)"] }
